[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/TitleHUD.gd" type="Script" id=1]
[ext_resource path="res://Xolonium-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = ExtResource( 2 )

[node name="TitleHUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -244.0
margin_right = 244.0
margin_bottom = 116.0
custom_fonts/font = SubResource( 1 )
text = "RunJump"
align = 1

[node name="HighScore" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -244.0
margin_top = 96.0
margin_right = 244.0
grow_horizontal = 2
custom_fonts/font = SubResource( 2 )
text = "High Score: 0"
align = 1

[node name="Label2" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -244.0
margin_top = -192.0
margin_right = 244.0
margin_bottom = -96.0
custom_fonts/font = SubResource( 3 )
text = "Tap to play"
align = 1

[node name="SettingsButton" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -258.0
margin_top = -64.0
custom_fonts/font = SubResource( 4 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VersionLabel" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -14.0
margin_right = 200.0
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="SettingsButton" to="." method="_on_SettingsButton_pressed"]
